# 3DCovarEstimation

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CovarEstimate_sgd_test.m  README.md  comet_pipeline.py  cosineSimilarity.m  covar_analyzer.py  covar_classical_method_test.py  covar_cost_func.m  covar_distributed.py  covar_estimate_test.py  covar_estimation.py  covar_gradient_naive.m  covar_sgd.py  cryo_project_arr.m  eigen_removal_test.py  fsc_utils.py  generate_data.m  im_backproject_arr.m  iterative_covar_sgd.py  jupy_test.ipynb  nufft_cached_source.py  nufft_disc.py  nufft_plan.py  projection_funcs.py  pyproject.toml  rank1gd_test.m  testFuncs.py  test_covar_grad.py  test_nufft_plan.py  test_torch_impl.py  test_torch_wraps.py  test_wiener_impl.py  transposeTensor.m  utils.py  voxelSurf.m  wiener_coords.py  workflow.py
cov3d/: analysis_viewer.py  analyze.py  covar.py  covar_distributed.py  covar_sgd.py  dataset.py  fsc_utils.py  iterative_covar_sgd.py  logger.py  mean.py  newton_opt.py  nufft_plan.py  poses.py  projection_funcs.py  reconstruct_utils.py  recovar_utils.py  sim_source.py  source.py  synthetic_experiment.py  trajectory.py  utils.py  wiener_coords.py  workflow.py
scripts/: add_labels2star.py  analyze_recovar_results.py  chimerax_visuals.py  comet_cryodrgn.py  comet_pipeline.py  compare_recovar_results.py  compute_eigenvecs.py  compute_pose_errors.py  convert_cryosparc_coords.py  convert_recovar_model.py  cryobench_prepare_dataset.py  cryodrgn_preprocess.sh  cryosparc_preprocess.py  download_empiar_vols.sh  downsample_vol.py  merge_mrcs.py  (+24 more)
(+5 files in other folders)
