[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cov3d"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "aspire==0.13.1",
    "click==8.1.8",
    "cufinufft==2.3.1",
    "finufft==2.3.0",
    "matplotlib==3.10.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "torch==2.1.0",
    "tqdm==4.67.1",
    "umap-learn==0.5.7"
]

[tool.setuptools]
packages = ["cov3d"]