[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cov3d"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "aspire==0.13.1",
    "click==8.1.8",
    "cufinufft==2.3.1",
    "finufft==2.3.0",
    "matplotlib==3.6.3",
    "numpy==1.26.4",
    "pandas==1.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "tqdm==4.67.1",
    "umap-learn==0.5.4",
    "tensorflow==2.18.0",
    "cryodrgn==2.3.0",
    "matplotlib_scalebar==0.9.0",
    "dataframe_image==0.2.7",
    "starfile==0.5.1",
    "scikit-fmm==2025.1.29",
    "jax==0.5.0",
    "jaxlib==0.5.0"
]

[project.optional-dependencies]
dev = [
    "comet_ml==3.48.1",
    "dadapy==0.3.2"
]

[tool.setuptools]
packages = ["cov3d"]